Fix hero overflow issue/Fix News feed images fit

--- a/curling-main/sass/modules/_misc.scss
+++ b/curling-main/sass/modules/_misc.scss
@@ -366,5 +366,7 @@
 
 /* Twitter IPhone Hack */
 .twitter-timeline {
-	width: 100vw !important;
+  margin-top: 11px!important;
+  margin-bottom: 11px!important;
+	width: 100vw!important;
 }
