--- a/curling-main/sass/modules/blocks/_block-hero-carousel.scss
+++ b/curling-main/sass/modules/blocks/_block-hero-carousel.scss
@@ -1,5 +1,6 @@
 .block-hero-carousel {
   min-height: 600px;
+  overflow-x: hidden;
 
   .master-slider {
     // transition-duration: 0.5s!important;
