--- a/curling-main/sass/modules/blocks/_block-news-feed.scss
+++ b/curling-main/sass/modules/blocks/_block-news-feed.scss
@@ -42,7 +42,7 @@
 .news-feed-thumbnail {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   background-color: $black;
 }
 
